2012-04-17 Roman
- UI.WebVision: Adaptive update interface period is made by 3x to last interface update time.
    Images update hang is prevented on previous image load lost (typical for Konqueror).
- FIX:SYS: QT4 (QTGui) check for error on miss is fixed. Checking to QTGui full replaced for use "pkg-config QTGui".


2012-04-16 Roman
- FIX:SYS: TCntrNode::nodeAt() is fixed for no exceptions mode.
- FIX:UI.Vision: Cursor change on mouse move to map area of primitive "Media" is fixed.
- FIX:UI.WebVision: Map number for event generation "ws_MapAct{x}Left" of primitive "Media" is fixed.


2012-04-15 Roman
- FIX:DAQ: All included nodes (templates) are set to modify on templates' library DB change.
- FIX:DAQ.ModBus: No read only writible register by "C:3:w" for logical type is set.
- FIX:Protocol.ModBus: Read Coils by function 1 for no one set is fixed.


2012-04-13 Maxim
- FIX:UI.WebVision: Several declarations of unused variables are removed.


2012-04-13 Roman
- SYS: For build to OpenSuSE and Mandriva defined "pkgconfigdir" variable.
- FIX:SYS: Permition for write on "/gen/workdir", "/gen/icodir" and "/gen/moddir" is fixed.
- DAQ.JavaLikeCalc: Operation '^' syntax highlight is added.


2012-04-06 Roman 0.8.0
- UI.QTStarter: Splash is updated for 0.8.0 release.
- DOC: Release notes for version 0.8.0 is added. Index files is updated.
- FIX:DAQ.OPC_UA: Build for old version of OpenSSL is fixed.


- UI.Vision: The signal QAction::activated(), from QT3, is replaced by QAction::triggered() full at last.


2012-04-05 Roman
- FIX:UI.QTStarter: Count only "QMainWindow" set for correct exit on last modules list window close.
- FIX:DAQ.Template: Restore template build after module DAQ.JavaLikeCalc or builded function close.
- FIX:Special.SystemTests: Original message fixed.
- FIX:DAQ.OPC_UA: Protocol requests counter show is fixed.


2012-04-04 Roman
- SYS: Config files some fixed and clear.